# weather_health

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api_requirements.txt  main.py
config/: config.yaml  mlflow.yaml
config/cloud/: aws.yaml  gcp.yaml
config/model/: gradient_boosting.yaml  lightgbm.yaml  logistic_regression.yaml  random_forest.yaml
infra/: terraform.tfstate  terraform.tfvars
infra-aws/: .gitignore  README.md  backend.tf  main.tf  versions.tf
infra-aws/.github/workflows/: deploy.yml
infra-aws/modules/ecr/: main.tf  variables.tf
infra-aws/modules/ecs-fargate/: main.tf  variables.tf
infra-aws/modules/s3-artifacts/: main.tf
infra-aws/modules/vpc/: main.tf
infra-gcp/: README.md  backend.tf  main.tf  versions.tf
infra-gcp/.github/workflows/: deploy.yml
infra-gcp/modules/artifact-registry/: main.tf
infra-gcp/modules/cloudrun/: main.tf
infra-gcp/modules/gcs-artifacts/: main.tf
lambda_src/: lambda_function.py
lambda_src/app/: lambda_function.py
monitoring/: basewd.ipynb  dummy_metrics_calculation.py
notebook/: EDA.ipynb  banking-dataset-marketing-targets.ipynb  banking-model-multiclass-classification.ipynb
reports/eda_outputs/: weather-health-eda_report.html
service/: requirements.txt
src/: __init__.py  clean_data.py  create_input_sample.py  data_split.py  evaluate.py  evidently_metrics.py  fetch_best_model.py  optimisation.py  pipeline.py  serve.py  serve_local.py  train.py  train_all.py  transform.py  visualise.py
src/misc/: train.py  train2.py
src/utils/: create_aws_block.py  mlflow_manager.py  opti.py  optimisation.py  plotoutputs.py
tests/: conftest.py  test_clean_data.py  test_transform.py  test_utils.py
