[project]
name = "weather-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evidently>=0.7.6",
    "fastparquet>=2024.11.0",
    "hyperopt>=0.2.7",
    "jupyterlab>=4.4.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "mlflow>=2.22.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "prefect>=3.4.3",
    "prettytable>=3.16.0",
    "psycopg-binary>=3.2.9",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "ydata-profiling>=4.16.1",
]
